# rustTest

./: Cargo.toml  foo.csv
src/: binary.rs  main.rs  map_data.rs
