[package]
name = "hello_world"
version = "0.1.0"
authors = ["仁木　洋 <hiroshi.niki@jbs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.3"
csv = "1.1.3"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"